--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,7 +80,7 @@
 .dashboardLayout {  display: grid;
   grid-template-columns: 265fr 265fr 265fr 220fr 220fr;
   grid-template-rows: 135fr 500fr;
-  gap: 18px;
+  gap: 3% 2%;
   grid-auto-flow: row;
   grid-template-areas:
     "box1 box2 box3 box5 box5"
